Minor spacing changes: more space above 'Show more', fix z-index of components, add more padding Comparison box

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,6 +52,8 @@ label {
     display: flex;
     width: 100%;
     padding: 10px 0px;
+    position: relative;
+    z-index: 2;
 }
 
 #logo {
@@ -60,18 +62,24 @@ label {
     width: 120px;
 }
 
+#sticky {
+    position: fixed;
+    z-index: 2;
+    bottom:0px;
+}
+
 #background{
     background-image: linear-gradient(180deg, #F251B1, #BD86FF);
     background-repeat: no-repeat;
     position:fixed;
-    z-index:0;
+    z-index: 0;
     width: 100vw;
     height: 100vh;
 }
  
 #content{
-    z-index:1;
     position:relative;
+    z-index:1;
 }
 
 /*Input {*/
